# dumb_code_assistant

./: .gitignore  README.md  pyproject.toml
examples/: bridge.example.json  demo_prompts.md  env.example  goals.md
src/project_assistant/: __init__.py  __main__.py  cli.py  config.py  demo_tasks.py  diffing.py  logging_setup.py  models.py  ollama_client.py  orchestrator.py  prompts.py  root_guard.py  runtime.py
src/project_assistant_mcp/: __init__.py  file_utils.py  server.py
tests/: test_cli.py  test_config.py  test_demo_tasks.py  test_diffing.py  test_docs.py  test_logging_setup.py  test_mcp_file_utils.py  test_mcp_server.py  test_orchestrator.py  test_root_guard.py  test_runtime.py
